# controllers/favorites.js
@@ -8,8 +8,9 @@ const controllerGetAllFavorites = async (req, res) => {
   const user = await User.findById(id);
   const favorites = user.favorites;
 
-  res.json( favorites );
-}
+  res.json(favorites);
+};
+
 const controllerGetFavorites = async (req, res) => {
   const { id } = req.user;
 
@@ -24,8 +25,8 @@ const controllerGetFavorites = async (req, res) => {
   const favoriteRecipes = await Recipe.find({
     _id: { $in: favoriteRecipeIds },
   })
-      .skip(skip)
-      .limit(limit);
+    .skip(skip)
+    .limit(limit);
 
   const totalPages = Math.ceil(totalRecipes / limit);
 
