# swagger.json
@@ -277,67 +277,8 @@
             "description": "User's info update successfully",
             "content": {
               "application/json": {
-                "type": "object",
-                "properties": {
-                  "_id": {
-                    "type": "string",
-                    "description": "User's id"
-                  },
-                  "name": {
-                    "type": "string",
-                    "description": "User's name"
-                  },
-                  "email": {
-                    "type": "string",
-                    "description": "User's email",
-                    "format": "email"
-                  },
-                  "password": {
-                    "type": "string",
-                    "description": "User's password"
-                  },
-                  "avatarURL": {
-                    "type": "string",
-                    "description": "Avatar url"
-                  },
-                  "subscription": {
-                    "type": "string",
-                    "description": "User's email for subscription"
-                  },
-                  "verify": {
-                    "type": "boolean",
-                    "description": "User's email for subscriptionVerification user's email"
-                  },
-                  "favorites": {
-                    "type": "array",
-                    "description": "User's favorites recipes",
-                    "items": {
-                      "type": "string",
-                      "description": "favorites recipe"
-                    }
-                  },
-                  "shoppingList": {
-                    "type": "array",
-                    "description": "User's favorites recipes",
-                    "items": {
-                      "type": "string",
-                      "description": "favorites recipe"
-                    }
-                  },
-                  "createdAt": {
-                    "type": "string",
-                    "format": "data-time",
-                    "description": "User's created date"
-                  },
-                  "updatedAt": {
-                    "type": "string",
-                    "format": "data-time",
-                    "description": "User's updated date"
-                  },
-                  "verificationToken": {
-                    "type": "string",
-                    "description": "User's verification token"
-                  }
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateUserResponse"
                 }
               }
             }
@@ -557,7 +498,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CategoryList"
+                  "CategoryList": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
@@ -620,6 +566,26 @@
             "type": "string",
             "required": true,
             "description": "search query in the title "
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 6
+            },
+            "description": "The number of items per page"
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -684,11 +650,23 @@
           },
           {
             "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
             "name": "limit",
-            "required": false,
-            "type": "integer",
-            "default": 8,
-            "description": "The numbers of items to return"
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 8
+            },
+            "description": "The number of items per page"
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -909,6 +887,26 @@
             "required": true,
             "description": "User's id",
             "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 4
+            },
+            "description": "The number of items per page"
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -1007,6 +1005,26 @@
             },
             "required": true,
             "description": "Name of ingredient to search"
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 6
+            },
+            "description": "The number of items per page"
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -1048,19 +1066,94 @@
         }
       }
     },
-    "/api/favorites/": {
+    "/api/favorites/all": {
       "get": {
         "tags": ["Favorites recipes"],
-        "summary": "Return an array of the current user's favorite recipes (id)",
+        "summary": "Return all favorite recipes for a user",
         "parameters": [],
         "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
-            "description": "An array of recipes id",
+            "description": "Successful operation. Successful operation. Returns an array of favorite recipe IDs.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/FavoritesList"
+                  "type": "array",
+                  "items": {
+                    "type": "string",
+                    "description": "All recipes added by the user to favorites"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "401": {
+            "description": "Not authorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/api/favorites/": {
+      "get": {
+        "tags": ["Favorites recipes"],
+        "summary": "Return an array of the current user's favorite recipes (id)",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 1
+            },
+            "description": "The page number for pagination"
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "minimum": 1,
+              "default": 4
+            },
+            "description": "The number of items per page"
+          }
+        ],
+        "security": [{ "Bearer": [] }],
+        "responses": {
+          "200": {
+            "description": "Successful operation. Returns a list of favorite recipe info.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "FavoritesRecipeInfo": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/FavoritesList"
+                      }
+                    },
+                    "currentPage": {
+                      "type": "integer"
+                    },
+                    "totalPages": {
+                      "type": "integer"
+                    }
+                  }
                 }
               }
             }
@@ -1172,7 +1265,7 @@
           "name": {
             "type": "string",
             "description": "User's name",
-            "example": "Mary"
+            "example": "John Doe"
           },
           "email": {
             "type": "string",
@@ -1223,7 +1316,7 @@
         },
         "example": {
           "user": {
-            "id": "AeHIrLTr6JkxGE6SN-0Rw",
+            "_id": "AeHIrLTr6JkxGE6SN-0Rw",
             "name": "Mary",
             "email": "user@testmail.com",
             "subscription": "",
@@ -1254,7 +1347,7 @@
         "properties": {
           "token": {
             "type": "string",
-            "descriptions": "User's token",
+            "description": "User's token",
             "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0YWFhM2Q4M2RjYTU5YzgxMjRkMTE4YiIsImlhdCI6MTY4ODkwNTMxNywiZXhwIjoxNjg4OTg4MTE3fQ.3E2nKL-nFuDwe9zCyLQBPc14DIcq8Yf9tejUXu7fhJg"
           },
           "verify": {
@@ -1320,27 +1413,69 @@
           }
         }
       },
-      "CategoryList": {
-        "type": "array",
-        "items": {
-          "type": "string"
-        },
-        "example": [
-          "Beef",
-          "Breakfast",
-          "Chicken",
-          "Dessert",
-          "Goat",
-          "Lamb",
-          "Miscellaneous",
-          "Pasta",
-          "Pork",
-          "Seafood",
-          "Side",
-          "Starter",
-          "Vegan",
-          "Vegetarian"
-        ]
+      "UpdateUserResponse": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "User's id"
+          },
+          "name": {
+            "type": "string",
+            "description": "User's name"
+          },
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password"
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "Avatar url"
+          },
+          "subscription": {
+            "type": "string",
+            "description": "User's email for subscription"
+          },
+          "verify": {
+            "type": "boolean",
+            "description": "User's email for subscriptionVerification user's email"
+          },
+          "favorites": {
+            "type": "array",
+            "description": "User's favorites recipes",
+            "items": {
+              "type": "string",
+              "description": "favorites recipe"
+            }
+          },
+          "shoppingList": {
+            "type": "array",
+            "description": "User's favorites recipes",
+            "items": {
+              "type": "string",
+              "description": "favorites recipe"
+            }
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "User's created date"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "User's updated date"
+          },
+          "verificationToken": {
+            "type": "string",
+            "description": "User's verification token"
+          }
+        }
       },
       "IngredientsList": {
         "type": "array",
@@ -1379,7 +1514,7 @@
       "RecipeSchema": {
         "type": "object",
         "properties": {
-          "id": {
+          "_id": {
             "type": "string",
             "description": "id",
             "example": "6462a8f74c3d0ddd28897fc6"
@@ -1485,20 +1620,50 @@
         }
       },
       "FavoritesList": {
-        "type": "array",
+        "type": "object",
         "properties": {
-          "type": "array",
-          "description": "List of favorites recipes id",
-          "items": {
+          "_id": {
             "type": "string",
             "description": "Recipe's id"
+          },
+          "title": {
+            "type": "string",
+            "description": "Recipe's title"
+          },
+          "thumb": {
+            "type": "string",
+            "description": "Recipe's image"
+          },
+          "instructions": {
+            "type": "string",
+            "description": "Recipe's instructions"
+          },
+          "description": {
+            "type": "string",
+            "description": "Recipe's description"
+          },
+          "preview": {
+            "type": "string",
+            "description": "Recipe's preview image"
+          },
+          "time": {
+            "type": "string",
+            "description": "Recipe's cooking time"
           }
         },
-        "example": [
-          "6462a8f74c3d0ddd28897fc0",
-          "6462a8f74c3d0ddd28897fbf",
-          "6462a8f74c3d0ddd28897fc1"
-        ]
+        "example": {
+          "favoriteRecipeInfo": [
+            {
+              "_id": "6462a8f74c3d0ddd28897fd3",
+              "title": "Lamb Biryani",
+              "thumb": "https://www.themealdb.com/images/media/meals/xrttsx1487339558.jpg",
+              "instructions": "Grind the cashew, poppy seeds and cumin seeds into a smooth paste, using as little water as possible. Set aside. \r\n\r\nDeep fry the sliced onions when it is hot. Don’t overcrowd the oil. When the onions turn light brown, remove from oil and drain on paper towel. The fried onion will crisp up as it drains. Also fry the cashewnuts till golden brown. Set aside.\r\n\r\nWash the rice and soak in water for twenty minutes.\r\nMeanwhile, take a big wide pan, add oil in medium heat, add the sliced onions, add the blended paste, to it add the green chillies, ginger garlic paste and garlic and fry for a minute.\r\nThen add the tomatoes and sauté them well till they are cooked and not mushy.\r\n\r\nThen to it add the red chilli powder, biryani powder, mint, coriander leaves and sauté them well.\r\nAdd the yogurt and mix well. I always move the skillet away from the heat when adding yogurt which prevents it from curdling.\r\n\r\nNow after returning the skillet back to the stove, add the washed lamb and salt and ½ cup water and mix well. Cook for 1 hour and cook it covered in medium low heat or put it in a pressure cooker for 6 whistles. If the water is not drained totally, heat it by keeping it open.\r\n\r\nTake another big pan, add thrice the cup of rice you use, and boil it. When it is boiling high, add the rice, salt and jeera and mix well. After 7 minutes exact or when the rice is 80% done. Switch off and drain the rice.\r\n\r\nNow, the layering starts. To the lamb, pat and level it. Add the drained hot rice on the top of it. Garnish with fried onions, ghee, mint, coriander leaves and saffron dissolved in milk.\r\n\r\nCover the dish and bake in a 350f oven for 15 minutes or till the cooked but not mushy. Or cook in the stove medium heat for 12 minutes and lowest heat for 5 minutes. And switch off. Mix and serve hot!\r\nNotes\r\n1. If you are cooking in oven, do make sure to cook in a big oven safe pan and cover it tight and then keep in oven for the final step.\r\n2. You can skip biryani masala if you don’t have and add just garam masala (1 tsp and red chilli powder – 3 tsp instead of 1 tsp)\r\n3. If it is spicy in the end, squeeze some lemon, it will reduce the heat and enhance the flavors also.",
+              "description": "A flavorful Indian rice dish made with lamb and a blend of aromatic spices.",
+              "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560404/ysduqgnnynuw6jcjuzxg.jpg",
+              "time": "90"
+            }
+          ]
+        }
       }
     },
     "securitySchemes": {
